<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    tools:context="com.inventerit.qrcodescanner.activities.ForgotPassActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@drawable/login_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/email"
            android:fontFamily="@font/roboto_slab"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:fontFamily="@font/roboto_slab"
            android:id="@+id/btn_reset"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"/>

        <TextView
            android:fontFamily="@font/roboto_slab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:text="@string/reset_text"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>